--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <p>This project aims to facilitate your design/simulation process by
 not having to care about compile orders anymore. Simply configure your
 libraries and optionally your top design file and cog.py will generate
-a list of compile order.</p>
+an list in which order the design elements are to be compiled.</p>
 
 <p>For a simple demonstration download the files from the link above
 in either tar.gz or zip format and run the <code>src/simple.py</code>
@@ -66,6 +66,20 @@ support Verilog flavours in the soon future as well.</p>
       </footer>
     </div>
 
+
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-46327987-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+<!--
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -76,7 +90,7 @@ support Verilog flavours in the soon future as well.</p>
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
-
+--> 
 
   </body>
 </html>
